--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "bin": "./cli.js",
   "repository": "olahol/viewdiff",
   "scripts": {
-    "build": "babel client.js > dist.js",
+    "build": "babel --presets react client.js > dist.js",
     "prepublish": "npm run build"
   },
   "author": "Ola Holmström",
- "license": "ISC",
+  "license": "ISC",
   "devDependencies": {
-    "babel": "^5.8.23"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "electron": "^1.8.2"
   },
   "keywords": [
     "standalone",
@@ -22,7 +25,6 @@
     "git"
   ],
   "dependencies": {
-    "electron-prebuilt": "^0.33.8",
     "get-stdin": "^5.0.0",
     "highlight.js": "^8.8.0",
     "lang-map": "^0.4.0",
